# velvetecho

./: .gitignore  ACTUAL_STATUS.md  API_ORGANIZATION_ASSESSMENT.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_AUDIT.md  CLI_GENERATOR_GUIDE.md  ENTERPRISE_GRADE_UPGRADE_COMPLETE.md  ENTERPRISE_TEST_REPORT.md  FILE_MANAGEMENT_GUIDE.md  FILE_MANAGEMENT_IMPLEMENTATION.md  FINAL_STATUS.md  FINAL_TEST_RESULTS.md  HANDOFF_TO_PATIENTCOMET_TEAM.md  HYPOTHETICAL_TEST_RESULTS.md  INTEGRATION_COMPLETE.md  LOCAL_TESTING_GUIDE.md  MODULAR_API_IMPLEMENTATION_COMPLETE.md  PATIENTCOMET_INTEGRATION.md  PATIENTCOMET_INTEGRATION_PLAN.md  QUICKSTART.md  QUICKSTART_TESTING.md  README.md  SESSION_SUMMARY.md  STATUS.md  TESTED_STATUS.md  TESTING_COMPLETE.md  TEST_EXECUTION_RESULTS.md  VELVETECHO_ARCHITECTURE.md  VELVETECHO_GETTING_STARTED.md  VELVETECHO_MONITORING_OPERATIONS.md  conftest.py  docker-compose.yml  init-db.sql  prometheus.yml  pyproject.toml  run_tests.sh  setup.py  test_comprehensive.py  test_cqrs_and_api.py  test_dag_fixed.py  (+8 more)
docs/: PATIENTCOMET_INTEGRATION.md  USE_CASE_PATTERNS.md
examples/: basic_workflow.py  communication_example.py  complete_api_example.py  file_management_example.py  lobsterclaws_full_integration.py  parallel_execution.py  patientcomet_full_integration.py  patientcomet_integration.py  quickstart_modular_api.py  whalefin_orchestration.py
test_scripts/: setup_lobsterclaws_db.py  setup_patientcomet_db.py  test_lobsterclaws_session.sh  test_patientcomet_workflow.sh
tests/: __init__.py  test_api_exceptions.py  test_api_responses.py  test_cache_serialization.py  (+6 more)
(+66 files in other folders)
