[tool.poetry]
name = "velvetecho"
version = "0.1.0"
description = "Distributed task orchestration and API infrastructure for microservices"
authors = ["Antoine Abdul-Massih"]
readme = "README.md"
packages = [{include = "velvetecho"}]

[tool.poetry.dependencies]
python = "^3.11"
# Task orchestration
temporalio = "^1.6.0"
# API framework
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
# Cache & queue
redis = {extras = ["hiredis"], version = "^5.0.1"}
# Database
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
# Monitoring
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
# Utilities
httpx = "^0.26.0"
orjson = "^3.9.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
